# sindri

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  plan-chore-secret-scanning.md  plan-feat-verify-candidate.md  plan-fix-read-state-clean-degrade.md  pyproject.toml  release-please-config.json
.agents/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  marketplace-bump.yml  publish.yml  release-please.yml  secret-scan.yml
commands/: clear.md  finalize.md  forge.md  help.md  loop.md  setup.md  sindri.md  status.md  stop.md
docs/: DOGFOOD.md  ci-cd.md  security.md
docs/design/: adr-001-architecture-cluster.md  architecture-cluster-session.md
docs/superpowers/plans/: 2026-04-19-sindri-plugin-artifacts.md  2026-04-19-sindri-python-core.md  2026-06-14-sindri-ux-overhaul.md
docs/superpowers/specs/: 2026-04-19-sindri-design.md  2026-06-14-sindri-ux-overhaul-design.md
docs/superpowers/specs/assets/: sindri-architecture-v2.html
prompts/: experiment-subagent.md
scripts/: coverage.sh  forge.sh  install-plugin.sh  smoke.sh
scripts/cov/: sitecustomize.py
skills/sindri-finalize/: SKILL.md
skills/sindri-loop/: SKILL.md
skills/sindri-scaffold-benchmark/: SKILL.md
skills/sindri-start/: SKILL.md
src/sindri/: __init__.py  __main__.py  cli.py
src/sindri/core/: git_ops.py  lock.py  metric.py  modes.py  noise.py  pool.py  pr_body.py  state.py  termination.py  validators.py  verify.py
tests/: conftest.py
tests/e2e/: conftest.py  stub_subagent.py  test_loop_end_to_end.py
tests/integration/: test_cli.py  test_git_ops.py  test_lock.py  test_state.py  test_verify_candidate.py
tests/unit/: test_forge_wrapper.py  test_metric.py  test_modes.py  test_noise.py  test_plugin_artifacts.py  test_pool.py  test_pr_body.py  test_state_digest.py  test_termination.py  test_uvx_invocation.py  test_validators.py  test_verify.py
