[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sindri-forge"
version = "0.5.1"
description = "Claude Code plugin core: bounded, target-driven optimization loops"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "4KMetrics"}]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sindri"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "e2e: full-lifecycle simulation tests (slow; ~10s+)",
]

[tool.coverage.run]
# Package name (not a relative path): the integration/e2e tests run the CLI from
# a tmp cwd, so a relative `src/sindri` source would filter their coverage out.
source = ["sindri"]
branch = true
# parallel + the scripts/cov sitecustomize hook capture coverage of cli.py,
# which the integration/e2e suites exercise via `python -m sindri` subprocesses.
# Run `./scripts/coverage.sh` (it sets COVERAGE_PROCESS_START + combines).
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
